config matches test notebook

--- a/config.json
+++ b/config.json
@@ -20,30 +20,22 @@
 
     "checks" : [
         {
-            "column": "GBDAT_EXP_ADD",
-            "check_type" : "VCDate",
-            "date_range": {
-                "start": "01.01.1950",
-                "end": "01.01.2025"
-            }
-        },
-        {
+            "check_type": "string_value_conformance",
             "column": "GSCHL_EXP_ADD",
-            "check_type": "VCStr",
             "values": ["w", "m"]
         },
         {
-            "column": "ZNLMSVEDPY",
-            "check_type": "VCStr",
-            "values": ["0", "1", "2", "3a", "3b", "4a", "4b", "4c", "5a", "5b", "5c"]
+            "check_type": "temporal_value_conformance",
+            "column": "GBDAT_EXP_ADD",
+            "date_range": {
+                "start": "01.01.1920",
+                "end": "01.06.2025"
+            }
         },
         {
-            "column": "ZNLMSVAEDA",
-            "check_type" : "VCDate",
-            "date_range": {
-                "start": "01.01.1950",
-                "end": "01.01.2025"
-            }
+            "check_type": "temporal_order_plausability",
+            "first": "GBDAT_EXP_ADD",
+            "last": "ZNLMSVAEDA"
         }
     ]
 }
